# dsms-python-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile.docs  LICENSE  README.md  environment_hiwi.txt  log.txt  requirements_PCL590_thesis.txt  setup.cfg  test.py  testktype.py
.github/workflows/: ci.yml
docs/: README.md  conf.py  describe.md  index.md  requirements.txt
docs/_static/: custom.css
docs/dsms_sdk/: dsms_config_schema.md  dsms_kitem_schema.md  dsms_sdk.md
docs/dsms_sdk/tutorials/: 1_introduction.ipynb  2_creation.ipynb  3_updation.ipynb  4_deletion.ipynb  5_search.ipynb  6_app_HDF5.ipynb  6_apps.ipynb  7_ktypes.ipynb  8_kitem_contexts.ipynb  testfile.txt
docs/source/: conf.py  dsms.md  dsms_config_schema.md  dsms_kitem_schema.md  dsms_sdk.md  index.md  installation.md  introduction.md
docs/source/assets/: Dummy_Tensile_Test_Data.csv  Dummy_Tensile_Test_Data.xlsx
docs/source/tutorials/: 1_introduction.ipynb  2_creation.ipynb  3_updation.ipynb  4_deletion.ipynb  5_search.ipynb  6_app_HDF5.ipynb
docs/src/: dsms.apps.rst  dsms.core.rst  dsms.knowledge.properties.rst  dsms.knowledge.rst  dsms.knowledge.sparql_interface.rst  dsms.rst  modules.rst  tests.rst
docs/src/source/: conf.py  index.rst
docs/tutorials/: 1_introduction.ipynb  2_creation.ipynb  3_updation.ipynb
dsms/: __init__.py
dsms/apps/: __init__.py  apps.py  config.py  utils.py
dsms/core/: __init__.py  attribute_dict.py  configuration.py  context.py  dsms.py  entrypoints.py  logging.py  session.py  utils.py
dsms/knowledge/: __init__.py  cli.py  compacted.py  data_format.py  kitem.py  kitem_wrapper.py  knowledge_wrapper.py  ktype.py  ktype_wrapper.py  search.py  utils.py  webform.py
dsms/knowledge/properties/: __init__.py  affiliations.py  annotations.py  apps.py  attachments.py  authors.py  avatar.py  base.py  contacts.py  custom_properties.py  dataframe.py  external_links.py  hdf5.py  linked_kitems.py  summary.py  user_groups.py  utils.py
dsms/knowledge/properties/custom_datatype/: __init__.py  numerical.py
dsms/knowledge/semantics/: __init__.py  units.py
dsms/knowledge/semantics/queries/: __init__.py  base.py
dsms/knowledge/semantics/units/: __init__.py  base.py  conversion.py  sparql.py  utils.py
dsms/knowledge/sparql_interface/: __init__.py  sparql_interface.py  subgraph.py  utils.py
examples/: basic_usage.ipynb  convert.py  create_and_run_app.py  get_units.py  link_and_trigger_app.py  run_kitem_app.py  testktype.py  unit.py  unit_conversion.ipynb
examples/Chapters/: 1_introduction.ipynb  2_creation.ipynb  3_updation.ipynb  4_deletion.ipynb  5_search.ipynb  6_app_HDF5.ipynb
examples/ktypes/: 1_creation.ipynb  2_updation.ipynb  3_deletion.ipynb  4_fetch.ipynb
examples/tutorials/: 1_introduction.ipynb  2_creation.ipynb  3_updation.ipynb  4_deletion.ipynb  5_search.ipynb  6_apps.ipynb  7_ktypes.ipynb  testfile.txt
tests/: conftest.py  test_kitem.py  test_utils.py
