[metadata]
name = dsms_sdk
version = v1.1.0
description = Python SDK core-package for working with the Dataspace Management System (DSMS).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MI-FraunhoferIWM/dsms-python-sdk
author = Matthias Büschelberger, Yoav Nahshon, Pablo De Andres
author_email = matthias.bueschelberger@iwm.fraunhofer.de, yoav.nahshon@iwm.fraunhofer.de, pablo.de.andres@iwm.fraunhofer.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    pydantic>=2
    pydantic-settings
    rdflib>=6,<7
    requests
python_requires = >=3.8
include_package_data = True

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
pre_commit =
    pre-commit==3.3.2
    pylint
tests =
    pytest==6.2.5
    pytest-mock
    responses

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}
