[metadata]
name = dsms_sdk
version = v2.0.4
description = Python SDK core-package for working with the Dataspace Management System (DSMS).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MI-FraunhoferIWM/dsms-python-sdk
author = Matthias Büschelberger, Yoav Nahshon, Pablo De Andres
author_email = matthias.bueschelberger@iwm.fraunhofer.de, yoav.nahshon@iwm.fraunhofer.de, pablo.de.andres@iwm.fraunhofer.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    PyYAML>=6,<7
    click>=8,<9
    html5lib>=1,<2
    lru-cache<1
    pandas>=2,<3
    pydantic>=2
    pydantic-settings
    python-dotenv
    qrcode-artistic>=3,<4
    rdflib>=6,<7
    requests
    segno>=1.6,<1.7
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    kitem = dsms.knowledge.cli:lookup_kitem

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
docs =
    ipython==8.26.0
    jupyter==1.0.0
    myst-parser==4.0.0
    nbsphinx==0.9.5
    sphinx-autobuild==2024.4.16
    sphinx-book-theme==1.1.3
    sphinx-copybutton==0.5.2
    sphinx-markdown-tables==0.0.17
    sphinx-panels==0.4.1
    sphinxcontrib-plantuml==0.30
    sphinxcontrib-redoc==1.6.0
pre_commit =
    pre-commit==3.3.2
    pylint==3.2.0
tests =
    pytest==6.2.5
    pytest-mock
    responses

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}
